Fixing overflow x in app

--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -16,7 +16,7 @@ html {
 
 #root {
   background: url("../images/background.png");
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 code {
